# moogan_course_scheduler

./: .gitignore  Cargo.toml  readme.md
scripts/: solver.py  solver_mask.py
src/: lib.rs  main.rs  parse.rs  solver.rs  utils.rs
