[package]
name = "moogan_course_scheduler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
wasm-bindgen = "0.2.89"
cfg-if = "1.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.4"
